Fix deprecated API usage and update Java source/target to 17
Co-authored-by: dkayiwa <1390773+dkayiwa@users.noreply.github.com>